Fix target _blank link icon alignment

--- a/packages/core/src/link/Link.css
+++ b/packages/core/src/link/Link.css
@@ -15,7 +15,7 @@
 /* Main css class */
 .saltLink {
   color: var(--link-color);
-  letter-spacing: 0px;
+  letter-spacing: var(--salt-text-letterSpacing);
   text-decoration: var(--link-textDecoration);
   font-family: var(--link-fontFamily);
 }
@@ -31,8 +31,8 @@
 }
 
 /* External link's icon */
-.saltLink-icon {
-  margin-left: var(--salt-size-adornmentGap);
+.saltLink .saltLink-icon {
+  margin-left: var(--salt-spacing-75);
   margin-bottom: -2px;
 }
 
